# heroes

./: .gitignore  Makefile  README.md  app-server.nix  app.cabal  build-docker.sh  build.sh  cabal.project  docker.nix  flake.nix  nixpkgs.nix
.github/workflows/: main.yml
src/: Client.hs  Common.hs  Server.hs  client.hs  server.hs
src/App/: Action.hs  Component.hs  Model.hs  Routes.hs  Update.hs  View.hs
src/Domain/: Hero.hs
src/Heroes/: Action.hs  Component.hs  Model.hs  Routes.hs  Update.hs  View.hs
src/Server/: Api.hs
static/: index.html  index.js
