cabal-version:      3.0
name:               heroes
version:            0.1.0.0
build-type:         Simple

executable app

  default-language:
    GHC2024
  hs-source-dirs:
    src
  main-is:
    client.hs
  other-modules:
    Common
  build-depends: 
    aeson, base, miso, servant, mtl, text, http-types
  ghc-options: 
    -Wall -O2 -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"

executable heroes-server
  default-language:
    GHC2024
  hs-source-dirs:
    src
  main-is:
    server.hs
  other-modules:
    Common
  build-depends: 
    aeson, base, miso, network-uri, servant, servant-server, wai-extra, warp, mtl, text, wai, wai-app-static, http-types
  ghc-options: 
    -Wall -O2

